--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     "image":"https://malcantara.adv.br/public/assets/logo.svg",
     "description":"Advocacia empresarial e familiar: contratos, planejamento sucessório e governança familiar.",
     "telephone":"+55-38-98416-4737",
-    "email":"contato@malcantara.adv.br",
+    "email":"escritorio@malcantara.adv.br",
     "address":{
       "@type":"PostalAddress",
       "streetAddress":"Rua Áustria, 61 – Ibituruna",
