--- a/blog.html
+++ b/blog.html
@@ -1,69 +1,18 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-
+<!-- /posts/planejamento-sucessorio.html -->
+<!DOCTYPE html><html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog | MA – Inteligência Jurídica</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
-  <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      AOS.init({ duration: 700, once: true });
-    });
-  </script>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Planejamento Sucessório | MA – Inteligência Jurídica</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
-<body class="bg-[#F8F5F0] text-[#0C2A52] font-sans">
-
-  <!-- Header -->
-  <header class="fixed top-0 w-full z-40 bg-white/80 backdrop-blur-md shadow-sm px-6 py-4 flex items-center justify-between">
-    <a href="/index.html">
-      <img src="/assets/ma-logo-premium.svg" alt="MA – Inteligência Jurídica" class="h-10 w-auto max-w-[180px]">
-    </a>
-    <nav class="hidden md:flex gap-6 text-sm font-semibold">
-      <a href="/index.html#servicos" class="hover:text-[#C5A268]">Serviços</a>
-      <a href="/index.html#metodologia" class="hover:text-[#C5A268]">Metodologia</a>
-      <a href="/index.html#missao" class="hover:text-[#C5A268]">Missão</a>
-      <a href="/index.html#contato" class="hover:text-[#C5A268]">Contato</a>
-      <span class="text-[#C5A268] font-bold">Blog</span>
-    </nav>
-  </header>
-
-  <!-- Conteúdo principal -->
-  <main class="pt-32 px-6 pb-24 max-w-6xl mx-auto">
-    <h1 class="text-4xl font-bold mb-12 text-center">Insights Jurídicos</h1>
-    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10">
-
-      <!-- Post exemplo -->
-      <a href="/posts/planejamento-sucessorio.html" class="bg-white rounded-lg shadow hover:shadow-md transition overflow-hidden" data-aos="fade-up">
-        <img src="/assets/blog/planejamento-sucessorio.jpg" alt="Capa do artigo" class="w-full h-48 object-cover">
-        <div class="p-6">
-          <h2 class="text-xl font-semibold mb-2">Planejamento Sucessório: por que importa?</h2>
-          <p class="text-sm text-gray-700">Organizar a sucessão patrimonial evita conflitos familiares e garante a continuidade dos negócios...</p>
-        </div>
-      </a>
-
-      <!-- Outros posts podem ser inseridos aqui -->
-
-    </div>
-  </main>
-
-  <!-- Rodapé -->
-  <footer class="bg-[#0C2A52] text-white text-sm py-8 px-6">
-    <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between gap-4">
-      <div>
-        <p>© 2025 MA – Inteligência Jurídica</p>
-        <p>Rua Áustria, 61 – Ibituruna – Montes Claros/MG</p>
-        <p><a href="mailto:contato@malcantara.adv.br" class="underline">contato@malcantara.adv.br</a> • +55 38 98416-4737</p>
-      </div>
-      <div>
-        <a href="/index.html" class="underline">Voltar ao Início</a>
-      </div>
-    </div>
-  </footer>
-
+<body class="bg-[var(--creme)] text-[var(--azul)] font-sans">
+  <article class="max-w-3xl mx-auto px-6 py-20 space-y-6">
+    <h1 class="text-3xl font-bold">Planejamento Sucessório: por que importa?</h1>
+    <img src="/public/capas/planejamento-sucessorio.jpg" alt="" class="rounded-lg w-full">
+    <p>Conteúdo completo do artigo…</p>
+    <!-- … -->
+    <a href="/blog.html" class="block mt-12 underline">← Voltar ao Blog</a>
+  </article>
 </body>
-
 </html>
